--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
     </header>
-
+<!-- Test comment -->
     <img class="tech"></img>
     <main class="content">
         <section class="about-me">
