--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 </head>
 
 <body>
-    <header>
+    <div id="main-header">
+      <div id="Title">  
         <h1>Stephen Garcia</h1>
-        <nav>
-            <ul>
+        </div>
+    </div>
+        <section>
+            <ul id="links">
                 <li>
                     <a href="#about-me">About Me</a>
                 </li>
@@ -22,9 +25,8 @@
                     <a href="#contact-me">Contact Me</a>
                 </li>
             </ul>
-        </nav>
-    </header>
-<!-- Test comment -->
+    </section>
+
     <img class="tech"></img>
     <main class="content">
         <section class="about-me">
