--- a/index copy.html
+++ b/index copy.html
@@ -5,23 +5,39 @@
     <meta charset="UTF-8">
     <title>Stephen's Portfolio</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+
+    <style>
+        .outline {
+            border: 1px solid red;
+        }
+
+        .flex {
+
+            display: flex;
+        }
+    </style>
 </head>
 
 <body>
-    <header>
-        <h1>Stephen Garcia</h1>
-        <p>Web Developer</p>
-    </header>
-    <nav>
-        <a href="#about-me">About Me</a>
-        <a href="#my-work">My Work</a>
-        <a href="#contact-me">Contact Me</a>
-    </nav>
+    <div id="main-header" class="outline flex">
+        <div id="Title" class="outline">
+            <h1>Stephen Garcia</h1>
+        </div>
+
+
+        <section class="outline">
+            <nav id="links">
+                    <a href="#about-me">About Me</a>
+                    <a href="#my-work">My Work</a>
+                    <a href="#contact-me">Contact Me</a>
+            </nav>
+        </section>
+    </div>
 
     <img class="tech"></img>
-    <main>
-        <section class="about-me" id="about-me">
-            <img src="./assets/images/about-me.jpg" alt="Picture of Stephen Garcia" class="float-right" />
+    <main class="content outline">
+        <section class="about-me outline">
+            <img src="./assets/images/about-me.jpg" alt="Picture of Stephen Garcia" class="float-left" />
             <h2>About Me</h2>
             <p> Hello! My name is Stephen Garcia. I am 26 years old and currently live in Thornton, Colorado. I am a
                 husband, soon to be Dad, and aspiring Nerd! I am currently enrolled in the fullstack DU bootcamp and
@@ -31,28 +47,22 @@
             </p>
         </section>
 
-        <section class="my-work" id="my-work">
+        <section class="my-work outline">
             <img src="./assets/images/my-work.jpg" alt="Person on laptop and phone" class="float-right" />
             <h2>My Work</h2>
-            <p> While I dont have any previous work in web development, I will be adding all of my achievments to this
-                personal profile!
-
+            <p>
             </p>
         </section>
 
-        <section class="contact-me" id="contact-me">
+        <section class="contact-me outline">
             <img src="./assets/images/contact-me.jpg" alt="People working on a table together" class="float-right" />
             <h2>Contact Me</h2>
-            <li>
-                <a href="https://github.com/StephenGarcia1234">Github</a>
-            </li>
-
-            <li>
-                <a href="mailto: garciastephen5280@gmial.com">Email Me!</a>
-            </li>
-
+            <p>
+            </p>
         </section>
     </main>
+
+
 </body>
 
 </html>
