--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </section>
 
         <section class="my-work" id="my-work">
-            <img src="./assets/images/my-work.jpg" alt="Person on laptop and phone" class="float-right" />
+            <img src="./assets/images/my-work.jpg" alt="Picture of a laptop with code on it" class="float-right" />
             <h2>My Work</h2>
             <p> While I dont have any previous work in web development, I will be adding all of my achievments to this
                 personal profile!
@@ -41,7 +41,7 @@
         </section>
 
         <section class="contact-me" id="contact-me">
-            <img src="./assets/images/contact-me.jpg" alt="People working on a table together" class="float-right" />
+            <img src="./assets/images/contact-me.jpg" alt="Picture of social media images" class="float-right" />
             <h2>Contact Me</h2>
             <li>
                 <a href="https://github.com/StephenGarcia1234">Github</a>
