changed colors and background colors in css

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <h1>Stephen Garcia</h1>
         <p>Web Developer</p>
+        <nav>
+            <a href="#about-me" id='a'>About Me</a>
+            <a href="#my-work" id='a'>My Work</a>
+            <a href="#contact-me" id='a'>Contact Me</a>
+        </nav>
     </header>
-    <nav>
-        <a href="#about-me">About Me</a>
-        <a href="#my-work">My Work</a>
-        <a href="#contact-me">Contact Me</a>
-    </nav>
 
     <img class="tech"></img>
     <main>
