Changed username in github link

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <img src="./assets/images/contact-me.jpg" alt="Picture of social media images" class="float-right" />
             <h2>Contact Me</h2>
             <li>
-                <a href="https://github.com/StephenGarcia1234">Github</a>
+                <a href="https://github.com/Stephen-Garcia">Github</a>
             </li>
 
             <li>
